fixed colors for light and dark mode and also it's responsive now

--- a/src/index.css
+++ b/src/index.css
@@ -20,16 +20,6 @@ body.dark-mode {
   transition: background-image 0.3s ease, color 0.3s ease;
 }
 
-body.light-mode .form-container {
-  background-color: rgb(244, 244, 245);
-  transition: background-color 0.3s ease;
-}
-
-body.dark-mode .form-container {
-  background-color: rgb(63, 63, 70);
-  transition: background-color 0.3s ease;
-}
-
 body.light-mode header > h1 {
   color: rgb(31, 41, 55);
   transition: color 0.3s ease;
@@ -40,62 +30,32 @@ body.dark-mode header > h1 {
   transition: color 0.3s ease;
 }
 
-.toggle-container {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  display: flex;
-  align-items: center;
+body.light-mode .form-container {
+  background-color: rgb(244, 244, 245);
+  transition: background-color 0.3s ease;
 }
 
-.toggle-switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+body.dark-mode .form-container {
+  background-color: rgb(63, 63, 70);
+  transition: background-color 0.3s ease;
 }
 
-.toggle-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+body.light-mode .load-btn {
+  background-color: rgb(243, 244, 246);
+  transition: background-color 0.3s ease;
 }
 
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
-  border-radius: 34px;
+body.dark-mode .load-btn {
+  background-color: rgb(55, 65, 81);
+  transition: background-color 0.3s ease;
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-.slider:after {
-  content: "☀️";
-  position: absolute;
-  left: 5px;
-  bottom: 3px;
-  font-size: 18px;
-  transition: 0.4s;
+#load-btn:hover {
+  background-color: rgb(249, 115, 22);
 }
 
 input:checked + .slider {
-  background-color: #2196f3;
+  background-color: rgb(249, 115, 22);
 }
 
 input:checked + .slider:before {
@@ -155,6 +115,14 @@ input:checked + .slider:after {
 @media (prefers-color-scheme: dark) {
   body {
     background-image: url("/pattern-randomized-dark.svg");
+  }
+}
+
+@media (max-width: 768px) {
+  #load-btn {
+    border-color: rgb(249, 115, 22);
+    background-color: rgb(249, 115, 22);
+    color: #fff;
   }
 }
 
